tests/snapshots/files__repro_unsound.snap
---
source: tests/files.rs
expression: snapshot_content
---
Acos: 0
Add: 1
And: 0
Asin: 0
Atan: 0
Atan2: 0
Cbrt: 0
Ceil: 0
Cos: 0
Cosh: 0
Div: 8654
E: 0
Eq: 0
Exp: 2
Expm1: 2
FALSE: 0
Fabs: 0
Floor: 0
Fma: 416
Greater: 0
GreaterEq: 0
Hypot: 0
INFINITY: 0
If: 1
Less: 0
LessEq: 0
Log: 0
Log1p: 0
Mul: 2811
Neg: 186
Not: 0
NotEq: 1
Num: 3
Or: 0
PI: 0
Pow: 0
Round: 0
Sin: 0
Sinh: 0
Sqrt: 0
Sub: 8580
TRUE: 0
Tan: 0
Tanh: 0
Type: 1
Var: 1
universe: 2
