tests/snapshots/files__repro_unsound_htutorial_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
@ExistsConstructor: 0
Add: 1
Div: 0
Mul: 0
Num: 0
Var: 3
