tests/snapshots/files__repro_unsound_htutorial_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
Add: 1
Add: 1
Div: 0
Div: 0
Mul: 0
Mul: 0
Num: 0
Num: 0
Var: 3
Var: 3
