tests/snapshots/files__resolution.snap
---
source: tests/files.rs
expression: snapshot_content
---
FalseConst: 1
TrueConst: 1
myor: 3
negate: 2
p: 3
