tests/snapshots/files__resolution_proof_testing.snap
---
source: tests/files.rs
expression: snapshot_content
---
(Fiat (= () ()))(let prop0 (= (p 0) (FalseConst)))
(let t0 (myor (negate (p 0)) (myor (FalseConst) (FalseConst))))
(let prop1 (= (negate (p 0)) t0))
(let prop2 (= t0 (negate (p 0))))
(let t1 (myor (negate (p 0)) (FalseConst)))
(let t2 (a (negate (p 0))))
(let prf0
  (Rule
                          (= t1 (negate (p 0)))
                          (name "(rewrite (myor a $False) a)")
                          (premises (Fiat (= t1 t1)))
                          (substitution
                            t2
                            (@rewrite_var__5 t1)
                            ($False (FalseConst)))))
(let prf1 (Sym (= (negate (p 0)) t1) prf0))
(let prop3 (= t0 (TrueConst)))
(let t3 (myor (p 2) t1))
(let t4 (myor (negate (p 2)) (myor (FalseConst) (FalseConst))))
(let prop4 (= (TrueConst) t4))
(let t5 (myor (negate (p 2)) (FalseConst)))
(let t6 (myor (p 1) t5))
(let t7
  (premises
                            (Congr
                              (= (TrueConst) (myor (FalseConst) t5))
                              (Sym (= (TrueConst) t6) (Fiat (= t6 (TrueConst))))
                              (Fiat (= (p 1) (FalseConst)))
                              0)))
(let prop5 (= t5 (negate (p 2))))
(let prf2
  (Sym
                          (= (negate (p 2)) t5)
                          (Rule
                            prop5
                            (name "(rewrite (myor a $False) a)")
                            (premises (Fiat (= t5 t5)))
                            (substitution
                              (a (negate (p 2)))
                              (@rewrite_var__5 t5)
                              ($False (FalseConst))))))
(let prf3
  (Rule
                          (= t5 (TrueConst))
                          (name "(rewrite (myor $False a) a)")
                          t7
                          (substitution
                            (@rewrite_var__4 (TrueConst))
                            ($False (FalseConst))
                            (a t5))))
(Trans
  prop0
  (Rule
    prop0
    (name
      "(rule ((= (negate p) $True))
      ((union p $False))
         )")
    (premises
      (Trans
        (= (negate (p 0)) (TrueConst))
        (Sym
          prop1
          (Sym
            prop2
            (Sym
              prop1
              (Rule
                prop2
                (name "(rewrite (myor (myor a b) c) (myor a (myor b c)))")
                (premises
                  (Congr (= (negate (p 0)) (myor t1 (FalseConst))) prf1 prf1 0))
                (substitution
                  (c (FalseConst))
                  t2
                  (b (FalseConst))
                  (@rewrite_var__ (negate (p 0))))))))
        (Sym
          prop3
          (Sym
            (= (TrueConst) t0)
            (Rule
              prop3
              (name
                "(rule ((= $True (myor a as))
       (= $True (myor (negate a) bs)))
      ((union (myor as bs) $True))
         )")
              (premises
                (Congr
                  (= (TrueConst) (myor (p 2) (negate (p 0))))
                  (Sym (= (TrueConst) t3) (Fiat (= t3 (TrueConst))))
                  prf0
                  1)
                (Congr
                  prop4
                  (Congr
                    (=
                      (TrueConst)
                      (myor (TrueConst) (myor (FalseConst) (FalseConst))))
                    (Sym
                      prop4
                      (Rule
                        (= t4 (TrueConst))
                        (name
                          "(rewrite (myor a (myor b c)) (myor b (myor a c)))")
                        t7
                        (substitution
                          (@rewrite_var__1 (TrueConst))
                          (a (FalseConst))
                          (b (negate (p 2)))
                          (c (FalseConst)))))
                    (Trans (= (negate (p 2)) (TrueConst)) prf2 prf3)
                    0)
                  (Trans
                    (= (TrueConst) (negate (p 2)))
                    (Sym (= (TrueConst) t5) prf3)
                    (Sym prop5 prf2))
                  0))
              (substitution
                (bs (myor (FalseConst) (FalseConst)))
                ($True (TrueConst))
                (a (p 2))
                (as (negate (p 0)))))))))
    (substitution (p (p 0)) ($True (TrueConst))))
  (Fiat (= (FalseConst) (FalseConst))))(let prop0 (= (p 2) (FalseConst)))
(let t0 (myor (negate (p 2)) (FalseConst)))
(let prop1 (= (negate (p 2)) t0))
(let prop2 (= t0 (negate (p 2))))
(let prop3 (= t0 (TrueConst)))
(let t1 (myor (p 1) t0))
(Trans
  prop0
  (Rule
    prop0
    (name
      "(rule ((= (negate p) $True))
      ((union p $False))
         )")
    (premises
      (Trans
        (= (negate (p 2)) (TrueConst))
        (Sym
          prop1
          (Sym
            prop2
            (Sym
              prop1
              (Rule
                prop2
                (name "(rewrite (myor a $False) a)")
                (premises (Fiat (= t0 t0)))
                (substitution
                  (a (negate (p 2)))
                  (@rewrite_var__5 t0)
                  ($False (FalseConst)))))))
        (Sym
          prop3
          (Sym
            (= (TrueConst) t0)
            (Rule
              prop3
              (name "(rewrite (myor $False a) a)")
              (premises
                (Congr
                  (= (TrueConst) (myor (FalseConst) t0))
                  (Sym (= (TrueConst) t1) (Fiat (= t1 (TrueConst))))
                  (Fiat (= (p 1) (FalseConst)))
                  0))
              (substitution
                (@rewrite_var__4 (TrueConst))
                ($False (FalseConst))
                (a t0)))))))
    (substitution (p (p 2)) ($True (TrueConst))))
  (Fiat (= (FalseConst) (FalseConst))))
