tests/snapshots/files__rw_analysis_proofs.snap
---
source: tests/files.rs
expression: snapshot_content
---
Add: 2
Add: 2
Ass: 10
Ass: 10
Bool: 2
Bool: 2
Call: 2
Call: 2
Const: 5
Const: 5
EndConst: 1
EndConst: 1
Eq: 1
Eq: 1
FalseConst: 1
FalseConst: 1
Goto: 3
Goto: 3
I: 3
I: 3
If: 2
If: 2
L: 15
L: 15
Prog: 15
Prog: 15
RProg: 13
RProg: 13
TopConst: 1
TopConst: 1
TrueConst: 1
TrueConst: 1
V: 9
V: 9
Var: 0
Var: 0
add-val: 1
add-val: 1
const-prop: 59
const-prop: 59
eq-val: 1
eq-val: 1
merge-val: 0
merge-val: 0
