tests/snapshots/files__semi_naive_set_function.snap
---
source: tests/files.rs
expression: serialized
---
nodes:
  i64-0:
    op: "0"
    children: []
    eclass: i64-0
    cost: 0
  f-0:
    op: f
    children:
      - i64-0
    eclass: i64-0
    cost: 1
  i64-17615343019692007359:
    op: "3"
    children: []
    eclass: i64-17615343019692007359
    cost: 0
  f-17615343019692007359:
    op: f
    children:
      - i64-17615343019692007359
    eclass: i64-0
    cost: 1
  i64-5871781006564002453:
    op: "1"
    children: []
    eclass: i64-5871781006564002453
    cost: 0
  f-5871781006564002453:
    op: f
    children:
      - i64-5871781006564002453
    eclass: i64-5871781006564002453
    cost: 1
  i64-11743562013128004906:
    op: "2"
    children: []
    eclass: i64-11743562013128004906
    cost: 0
  f-11743562013128004906:
    op: f
    children:
      - i64-11743562013128004906
    eclass: i64-11743562013128004906
    cost: 1
  g-0:
    op: g
    children:
      - i64-0
    eclass: i64-0
    cost: 1
  g-5871781006564002453:
    op: g
    children:
      - i64-5871781006564002453
    eclass: i64-5871781006564002453
    cost: 1
  g-11743562013128004906:
    op: g
    children:
      - i64-11743562013128004906
    eclass: i64-11743562013128004906
    cost: 1
  g-17615343019692007359:
    op: g
    children:
      - i64-17615343019692007359
    eclass: i64-17615343019692007359
    cost: 1
  i64-5040379952546458196:
    op: "4"
    children: []
    eclass: i64-5040379952546458196
    cost: 0
  g-5040379952546458196:
    op: g
    children:
      - i64-5040379952546458196
    eclass: i64-5040379952546458196
    cost: 1
  i64-10912160959110460649:
    op: "5"
    children: []
    eclass: i64-10912160959110460649
    cost: 0
  g-10912160959110460649:
    op: g
    children:
      - i64-10912160959110460649
    eclass: i64-10912160959110460649
    cost: 1
  i64-16783941965674463102:
    op: "6"
    children: []
    eclass: i64-16783941965674463102
    cost: 0
  g-16783941965674463102:
    op: g
    children:
      - i64-16783941965674463102
    eclass: i64-16783941965674463102
    cost: 1
  i64-4208978898528913939:
    op: "7"
    children: []
    eclass: i64-4208978898528913939
    cost: 0
  g-4208978898528913939:
    op: g
    children:
      - i64-4208978898528913939
    eclass: i64-4208978898528913939
    cost: 1
  i64-10080759905092916392:
    op: "8"
    children: []
    eclass: i64-10080759905092916392
    cost: 0
  g-10080759905092916392:
    op: g
    children:
      - i64-10080759905092916392
    eclass: i64-10080759905092916392
    cost: 1
  i64-15952540911656918845:
    op: "9"
    children: []
    eclass: i64-15952540911656918845
    cost: 0
  g-15952540911656918845:
    op: g
    children:
      - i64-15952540911656918845
    eclass: i64-15952540911656918845
    cost: 1
root_eclasses: []
class_data:
  i64-0:
    type: i64
  i64-17615343019692007359:
    type: i64
  i64-5871781006564002453:
    type: i64
  i64-11743562013128004906:
    type: i64
  i64-5040379952546458196:
    type: i64
  i64-10912160959110460649:
    type: i64
  i64-16783941965674463102:
    type: i64
  i64-4208978898528913939:
    type: i64
  i64-10080759905092916392:
    type: i64
  i64-15952540911656918845:
    type: i64

