tests/snapshots/files__shared_snapshot_antiunify.snap
---
source: tests/files.rs
expression: snapshot_content_across_treatments
---
(extraction-costs 8)
((AU 21)
 (Add 24)
 (Num 3)
 (Var 2))
